<resources>
    <string name="app_name">RecordLine</string>
    <string name="top_albums">Current Top 10</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="classical">Classical</string>
    <string name="metal">Metal</string>
    <string name="electronic">Electronic</string>
    <string name="hiphop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter text to search</string>
    <string name="transition_string">hello</string>
    <string name="quantity">Quantity:</string>
    <string name="email">Your Email</string>
    <string name="tracklist">"   Tracklist   "</string>
    <string name="artist_name">Artist Name</string>
    <string name="release_date">Release Date</string>
</resources>
