<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailView"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp"/>
        <TextView
            android:id="@+id/text_view_albumName"
            android:fontFamily="@font/oswald"
            android:text="Album Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_gravity="top"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_view_artistName"
                    android:text="@string/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/dolla"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_toLeftOf="@+id/text_view_price"
                    android:text="$"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/text_view_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_gravity="right"
                    android:text="Price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_view_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="15dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_weight="1.5"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracklist"
                android:textSize="16sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_weight="1.5"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_tracklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="List"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/edit_text_username" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decreaseQuantity"
                android:text="-"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/text_view_quantity"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increaseQuantity"
                android:text="+"/>
        </LinearLayout>

        <Button
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/categoryColor"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:onClick="orderButtonPressed"
            android:layout_gravity="right"
            android:text="Place Order"
            android:textSize="20sp"/>
        <!--        android:onClick="orderButtonPressed"-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="4dp"
            android:elevation="4dp"
            android:layout_margin="8dp"
            android:id="@+id/card_view_result_message"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@android:color/darker_gray"
                android:id="@+id/text_view_total_order"
                android:text="Your Total Order: " />
        </androidx.cardview.widget.CardView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/confirm_button"
            android:visibility="gone"
            android:text="Confirm Order"
            android:layout_marginTop="8dp"
            android:onClick="composeEmail"
            android:layout_gravity="end" />
    </LinearLayout>
</ScrollView>